# aiaggregator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  feeds.yaml  pyproject.toml  run.sh
aiaggregator/: analytics.py  config.py  db.py  feeds.py  main.py  markdown.py  market.py  models.py  queries.py  ranking.py  resources.py  sanitize.py  scoring.py  textnorm.py  ticker.py  timefmt.py  trends.py  vendors.py
aiaggregator/enrich/: cluster.py  digest.py  ollama_client.py  perspectives.py  summarize.py
aiaggregator/ingest/: fetcher.py  normalize.py  pipeline.py
aiaggregator/routes/: admin.py  dashboard.py  seo.py
aiaggregator/static/: app.css
aiaggregator/templates/: _card.html  _list.html  analytics.html  base.html  briefing.html  digest.html  feed.html  health.html  index.html  market_category.html  mypage.html  post.html  resources.html  trends.html  vendor.html  vendors.html
scripts/: make_og.py
tests/: conftest.py  test_enrich.py  test_market.py  test_normalize.py  test_pipeline.py  test_ranking.py  test_scoring.py  test_trends.py
