[project]
name = "aiaggregator"
version = "0.1.0"
description = "Local-first AI / Agentic-AI news aggregator dashboard (no paid APIs)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "feedparser>=6.0",
    "apscheduler>=3.10",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "numpy>=2.5.1",
]

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiaggregator"]
